--- a/src/app/pages/home/select/select.component.html
+++ b/src/app/pages/home/select/select.component.html
@@ -35,7 +35,7 @@
   </ul>
 </div>
 <button
-  routerLink="[/doctores/{{ selectedOption }}]"
+  [routerLink]="['/{{ selectedOption }}']"
   class="btn btn-secondary w-full border border-solid mt-4"
   [disabled]="selectedOption === 'Elige a tu especialista'"
 >
