--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -1,1 +1,42 @@
-<p>registro works!</p>
+<div class="container">
+  <div class="flex flex-row justify-center">
+    <div class="flex flex-col w-full md:w-6/12 lg:w-5/12">
+      <p class="font-bold text-3xl my-8">Crear cuenta</p>
+      <app-google-button text="Continuar con Google"></app-google-button>
+      <div class="divider my-8">o</div>
+      <input
+        type="text"
+        placeholder="Correo Electrónico"
+        class="mt-4 input input-bordered w-full"
+      />
+      <input
+        type="password"
+        placeholder="Contraseña"
+        class="mt-4 input input-bordered w-full"
+      />
+      <button class="my-4 btn btn-primary text-white">Registrarme</button>
+
+      <p class="text-sm text">
+        Al crear la cuenta de usuario aceptas los
+        <a
+          class="hover:underline cursor-pointer text-sm no-underline text-blue-500"
+          >términos y condiciones
+        </a>
+        del servicio de HealthMate S.A de C.V y reconoces que has leído nuestra
+        <a
+          class="hover:underline cursor-pointer text-sm no-underline text-blue-500"
+          >política de privacidad
+        </a>
+      </p>
+      <div class="divider"></div>
+      <p class="text-center">
+        ¿Ya tienes una cuenta?
+        <a
+          [routerLink]="['/login']"
+          class="btn btn-link no-underline text-blue-500"
+          >Inicia sesión</a
+        >
+      </p>
+    </div>
+  </div>
+</div>
