Chat screen first part

--- a/src/app/layouts/default-layout/nav/nav.component.html
+++ b/src/app/layouts/default-layout/nav/nav.component.html
@@ -1,6 +1,6 @@
 <div class="drawer">
   <input id="my-drawer-3" type="checkbox" class="drawer-toggle" />
-  <div class="drawer-content flex flex-col">
+  <div class="drawer-content flex flex-col !overflow-y-hidden">
     <!-- Navbar -->
     <div class="w-full navbar bg-primary">
       <div class="navbar-start">
