--- a/src/app/pages/usuarios/doctors/tabs/tabs.component.html
+++ b/src/app/pages/usuarios/doctors/tabs/tabs.component.html
@@ -21,7 +21,7 @@
 <div class="flex flex-col mt-8" *ngIf="activeTabIndex === 1">
   <div class="flex space-x-2 items-center">
     <mat-icon class="mr-2">location_on</mat-icon>
-    <p style="margin: 0">Dirección del doctor</p>
+    <p style="margin: 0">{{ doctor.direccion }}</p>
     <button class="btn btn-link">Mapa</button>
   </div>
   <div class="flex space-x-2 items-center mr-4">
