--- a/src/app/pages/usuarios/home/home.component.html
+++ b/src/app/pages/usuarios/home/home.component.html
@@ -7,7 +7,7 @@
       {{ especialistas }} profesionales están aquí para ayudarte.
     </p>
 
-    <app-select class="mt-4" [options]="options"></app-select>
+    <select-categoria class="mt-4" [options]="options"></select-categoria>
   </div>
   <img
     src="assets/home_icon3.svg"
@@ -69,5 +69,5 @@
 </div>
 
 <div class="container mx-auto">
-  <app-new-profile-carousel [cards]="cards"> </app-new-profile-carousel>
+  <app-new-profile-carousel> </app-new-profile-carousel>
 </div>
