--- a/src/app/pages/usuarios/doctors/doctors.component.html
+++ b/src/app/pages/usuarios/doctors/doctors.component.html
@@ -1,3 +1,5 @@
 <div class="bg-gray-300 w-full h-full p-12 flex flex-col space-y-4">
-  <app-card *ngFor="let item of [].constructor(10)"></app-card>
+  <!-- <ng-template *ngFor="let doctor of doctores">
+  </ng-template> -->
+  <app-card *ngFor="let doctor of doctores" [doctor]="doctor"></app-card>
 </div>
