--- a/src/app/pages/usuarios/home/new-profile-carousel/new-profile-carousel.component.html
+++ b/src/app/pages/usuarios/home/new-profile-carousel/new-profile-carousel.component.html
@@ -1,7 +1,7 @@
 <div class="mt-6 container flex flex-col items-start">
   <p class="font-bold text-xl">Nuevos especialistas en HealthMate</p>
-  <div>
-    <div class="flex overflow-x-hidden">
+  <div class="w-full">
+    <div class="flex overflow-x-hidden w-full">
       <button
         class="text-gray-600 py-2 px-4"
         (click)="prevPage()"
@@ -21,34 +21,34 @@
         </svg>
       </button>
 
-      <div class="flex" #carousel>
+      <div class="flex w-full" #carousel>
         <ng-container
           *ngFor="let page of pages"
           [ngSwitch]="currentPage === page"
         >
           <div
-            class="flex my-8 mx-4 space-x-3 carousel-page"
+            class="flex my-8 mx-4 space-x-3 carousel-page w-full"
             *ngSwitchCase="true"
           >
             <ng-container *ngFor="let card of getCardsForPage(page)">
-              <!-- TODO: Cambiar este link al card.id  -->
-              <!-- <a routerLink="/doctors/{{ card.id }}" -->
               <a
-                routerLink="/doctores/1"
+                routerLink="{{
+                  '/categoria/' + card.especialidad.id + '/doctor/' + card.id
+                }}"
                 class="card border solid w-full sm:w-1/2 lg:w-1/3 rounded-lg shadow-md p-4 flex flex-row justify-evenly items-center space-x-4"
               >
                 <img
-                  src="{{ card.image }}"
+                  src="{{ card.foto }}"
                   alt="doctor profile picture"
                   class="rounded-full w-[100px] h-[100px]"
                 />
                 <div class="flex flex-col">
                   <h2 class="text-sm md:text-lg font-bold mb-2">
-                    {{ card.title }}
+                    {{ card.nombre }}
                   </h2>
 
                   <p class="text-sm md:text-base text-gray-600">
-                    {{ card.description }}
+                    {{ card.especialidad.nombre }}
                   </p>
                 </div>
               </a>
