--- a/src/app/pages/doctores/home/home.component.html
+++ b/src/app/pages/doctores/home/home.component.html
@@ -1,1 +1,40 @@
-<p>home works!</p>
+<div class="p-16">
+  <h1 class="text-lg text-gray-500">Citas</h1>
+
+  <div
+    *ngFor="let cita of citas"
+    class="border border-solid rounded-md my-8 p-6"
+  >
+    <div class="flex flex-col">
+      <div class="flex flex-row">
+        <div class="w-7/12 flex">
+          <img
+            src="{{ environment.supabaseUrl + cita.usuario.foto }}"
+            alt="{{ cita.usuario.foto }}"
+            class="w-16 h-16 object-cover mr-4"
+          />
+          <div class="flex flex-col">
+            <p class="text-lg font-semibold">{{ cita.usuario.nombre }}</p>
+          </div>
+        </div>
+        <div class="w-5/12 flex justify-end">
+          <div class="flex flex-col">
+            <p class="text-base text-gray-400">{{ cita.fecha }}</p>
+            <p class="text-base text-gray-400">{{ cita.motivo }}</p>
+          </div>
+        </div>
+      </div>
+      <div class="divider"></div>
+      <div class="flex flex-row">
+        <div class="md:w-6/12 flex">
+          <a
+            [href]="['/doctores/detalles/' + cita.id]"
+            class="border border-solid p-4 rounded-md text-center text-base text-gray-600 hover:bg-gray-100"
+          >
+            Datos de la cita</a
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
