--- a/src/app/pages/usuarios/doctors/rating/rating.component.html
+++ b/src/app/pages/usuarios/doctors/rating/rating.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center">
+<div class="flex items-center md:flex-row flex-col">
   <div class="rating">
     <input
       *ngFor="let item of [].constructor(rating); index as i"
