--- a/src/app/pages/usuarios/profile/profile.component.html
+++ b/src/app/pages/usuarios/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col items-center py-16">
-  <p class="text-3xl">¡Hola {{ usuario.nombre }}!</p>
+  <p class="text-3xl text-center">¡Hola {{ usuario.nombre }}!</p>
   <p class="text-xl">Aquí puedes editar tus datos personales</p>
 
   <form (submit)="update()" class="my-8">
