Change to chat components, change backend

--- a/src/app/layouts/default-layout/nav/nav.component.html
+++ b/src/app/layouts/default-layout/nav/nav.component.html
@@ -91,6 +91,7 @@
       <app-sidebar *ngIf="profile"></app-sidebar>
       <div class="w-full">
         <router-outlet></router-outlet>
+        <app-footer></app-footer>
       </div>
     </div>
     <!--  -->
