--- a/src/app/pages/usuarios/home/home.component.html
+++ b/src/app/pages/usuarios/home/home.component.html
@@ -68,6 +68,6 @@
   </div>
 </div>
 
-<div class="container mx-auto">
+<div class="md:container mx-auto mb-4">
   <app-new-profile-carousel> </app-new-profile-carousel>
 </div>
