--- a/src/app/shared/components/chat-view/chat-view.component.html
+++ b/src/app/shared/components/chat-view/chat-view.component.html
@@ -3,23 +3,27 @@
     Mi Chat
   </div>
   <div class="flex-1 overflow-y-auto p-4 space-y-4">
-    <div class="chat-message" *ngFor="let message of messages">
+    <div
+      class="chat"
+      [ngClass]="{
+        'chat-end': message.sentByUser,
+        'chat-start': !message.sentByUser
+      }"
+      *ngFor="let message of messages"
+    >
+      <div class="chat-image avatar">
+        <div class="w-10 rounded-full">
+          <img src="{{ isDoctor ? fotoDoctor : fotoUsuario }}" />
+        </div>
+      </div>
       <div
-        class="flex items-end"
+        class="chat-bubble"
         [ngClass]="{
-          'justify-end': message.sentByUser,
-          'justify-start': !message.sentByUser
+          'chat-bubble-info': message.sentByUser,
+          'chat-bubble-success': !message.sentByUser
         }"
       >
-        <div
-          class="max-w-lg rounded-lg px-4 py-2"
-          [ngClass]="{
-            'bg-blue-500 text-white': message.sentByUser,
-            'bg-gray-300 text-black': !message.sentByUser
-          }"
-        >
-          {{ message.content }}
-        </div>
+        {{ message.content }}
       </div>
     </div>
   </div>
